[package]
name = "libp2p-tests"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.18", default-features = false, features = ["tcp", "secio", "yamux", "mplex", "mdns", "dns"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1"
thiserror = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
hex = "0.4"
async-std = "*"